# csdf

./: CMakeLists.txt  README.md  build_and_run_tests.sh
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  csdf.h
src/csdf/: actor.h  graph.h  record.c  record.h  repetition.c  repetition.h  sequential.c  sequential.h  utility.c  utility.h
src/csdf/execution/: actor.c  actor.h  actorrun.c  actorrun.h  buffer.c  buffer.h  graph.c  graph.h  graphrun.c  graphrun.h  parallel.c  parallel.h  sequential.c  sequential.h
src/csdf/execution/buffer/: stdlockfree.c  stdlockfree.h
src/csdf/execution/parallel/pthread/: CMakeLists.txt  pthread.c  pthread.h
tests/: CMakeLists.txt  tests.c
tests/samples/: larger.c  larger.h  simple.c  simple.h
tests/suites/: actors.c  actors.h  execution.c  execution.h  graph.c  graph.h  parallel.c  parallel.h  sequential.c  sequential.h
